# monet

./: .coveragerc  .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Readme.md  data.json  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini  test.sh
apps/api/: urls.py
apps/exams/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/exams/migrations/: 0001_initial.py  0002_question_answer_studentanswer.py
apps/students/: admin.py  managers.py  models.py  views.py
apps/students/migrations/: 0001_initial.py
monet/: asgi.py  settings.py  urls.py  wsgi.py
test/: test_dynamo.py
test/test_examen/: test_models.py
utils/: aws_dynamodb.py
