[tool.poetry]
name = "monet"
version = "0.1.0"
description = ""
authors = ["Nicolás Eduardo Rondón Ortiz <nicolas.rondon@crehana.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
pytest = "^7.2.2"
pre-commit = "^3.1.1"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
